add NFS mounted share; note on ReturnToService parameter

--- a/provisioning/templates/slurm.conf.j2
+++ b/provisioning/templates/slurm.conf.j2
@@ -159,4 +159,4 @@ PropagateResourceLimitsExcept=MEMLOCK
 JobCompType=jobcomp/filetxt
 #Epilog=/etc/slurm/slurm.epilog.clean
 SlurmctldParameters=enable_configless
-ReturnToService=1
+ReturnToService=1 # set to '2' to bring nodes back in *all* cases. See 'man slurm.conf'
